# Aeye

./: .gitignore  ARCHITECTURE.md  DEMO.md  PROJECT_SUMMARY.md  README.md  start.bat  start.sh
backend/: .env.example  MEMORY_FEATURE.md  README.md  pyproject.toml  requirements.txt  run.py  setup_venv.bat  setup_venv.sh  test_merged_detector.py
backend/app/: __init__.py  config.py  decision_engine.py  main.py  models.py
backend/app/agent/: __init__.py  keywords_client.py  reasoning.py
backend/app/memory/: __init__.py  database.py  face_service.py  models.py  service.py  summarizer.py  transcription.py
backend/app/perception/: __init__.py  detector.py  detector2.py  ocr.py  tracker.py
backend/app/routes/: __init__.py  memory.py
backend/data/: memory.db
backend/data/audio/: 31c96f4c-5bbe-4223-8f65-f8d79f90a428.webm  497eb91e-839e-45a3-a47f-9f4134249542.webm  5531aa59-3769-4d9d-add0-2b03fe4cf9e4.webm  7780663f-e95f-4223-af2f-7099d1eb847c.webm  daeb3437-97b0-47b5-99ed-b3bb9da20119.webm  f337dca7-6e85-4101-b850-b514b294f575.webm
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.jsx  index.css
frontend/src/components/: CameraView.css  CameraView.js  ControlPanel.css  ControlPanel.js  InteractionRecorder.css  InteractionRecorder.js  PeopleTab.css  PeopleTab.js  PersonDetail.css  PersonDetail.js  SpeechLog.css  SpeechLog.js  StatusBar.css  StatusBar.js  TracePanel.css  TracePanel.js  index.js
frontend/src/hooks/: index.js  useCamera.js  useDetection.js  useInteraction.js  (+1 more)
(+41 files in other folders)
